<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_sign_in">Sign In</string>

    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="title_search">Search</string>

    <string name="bottom_menu_popular">Popular</string>
    <string name="bottom_menu_now_playing">Now Playing</string>
    <string name="bottom_menu_upcoming">Upcoming</string>
    <string name="bottom_menu_top_rated">Top Rated</string>
    <string name="search">Search</string>
    <string name="search_title">Search</string>
    <string name="details_title">Details</string>
    <string name="search_hint">Search…</string>
    <string name="no_result_message">We Are Sorry,\nWe Can Not Find The Movie :(</string>
    <string name="no_movies_message">We Are Sorry,\nNo movies available for now :(</string>
    <string name="exit_app_msg">Press the back button once again to close the application.</string>
    <string name="home_popular">Popular</string>
    <string name="home_now_playing">Now Playing</string>
    <string name="home_upcoming">Upcoming</string>
    <string name="home_top_rated">Top Rated</string>
    <string name="overview">Overview</string>
    <string name="top_casts">Top Casts</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login_session_requirement">Login session requirement</string>
    <string name="login_require_msg">Please login to use the favorite feature!</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="forget_password">Forgot password?</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="favorite_add_movie_to_fav">Do you want to add that movie to your favorites?</string>
    <string name="favorite_remove_movie_from_fav">Do you want to remove that movie to your favorites?</string>
    <string name="sign_out_confirm_msg">Do you want to sign out?</string>
</resources>