<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_your_movies"
            android:icon="@drawable/ic_menu_your_movies"
            android:title="@string/menu_favorites" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_settings_about"
            android:title="@string/menu_sign_out" />
    </group>
</menu>