<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.datnguyen.movie_dev.ui.fragment.signin.SignInViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        tools:background="@color/colorPrimary">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="138dp"
                    android:layout_height="138dp"
                    android:layout_marginTop="40dp"
                    app:srcCompat="@drawable/ic_logo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="33dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/username"
                        android:textColor="@color/colorTextWhite"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp">

                        <EditText
                            android:id="@+id/ed_user_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/montserrat_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/enter_your_username"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:onTextChanged="@{viewModel.onUsernameTextChanged}"
                            android:textColor="@color/colorTextWhite"
                            android:textColorHint="@color/colorTextHint"
                            android:textSize="14sp">

                            <requestFocus />
                        </EditText>


                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="38dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/password"
                            android:textColor="@color/colorTextWhite"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/btn_forgot_pw"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:background="?attr/selectableItemBackground"
                            android:fontFamily="@font/montserrat_regular"
                            android:paddingStart="16dp"
                            android:text="@string/forget_password"
                            android:textColor="@color/colorTextWhite"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/bg_edit_text"
                        android:gravity="center_vertical"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:theme="@style/EditTextHint"
                        app:boxBackgroundMode="none"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorTextWhite">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/montserrat_regular"
                            android:gravity="center_vertical"
                            android:hint="@string/enter_your_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:onTextChanged="@{viewModel.onPasswordTextChanged}"
                            android:paddingTop="0dp"
                            android:paddingBottom="0dp"
                            android:textColor="@color/colorTextWhite"
                            android:textColorHint="@color/colorTextHint"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/btn_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:fontFamily="@font/montserrat_light"
                    android:padding="12dp"
                    android:text="@string/create_an_account"
                    android:textColor="@color/colorTextWhite_2"
                    android:textSize="14sp" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:alpha="0.5"
            android:background="@drawable/bg_btn"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:saveEnabled="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/sign_in"
                android:textColor="@color/colorTextWhite_2"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>


</layout>